# VerDoc

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  暑假项目-产品文档.md  暑假项目-技术方案.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: chat.py  eval_summary.py  feedback.py  meta.py  rate_limit.py  usage_metrics.py
backend/app/rag/: __init__.py  corpus.py  fusion.py  llm.py  orchestrator.py  prompt.py  reranker.py  retriever.py  schemas.py
backend/eval/: dataset.example.jsonl  metrics.py  run_eval.py
backend/pipeline/: __init__.py  chunk.py  embed.py  fetch.py  parse.py
backend/tests/: test_eval_runner.py  test_eval_summary_api.py  test_feedback_api.py  test_metrics.py  test_pipeline.py  test_rate_limit.py  test_usage_metrics.py  test_v0_rag.py  test_v2_retrieval.py
docs/: README.md  demo-script.md  deployment.md
frontend/: package.json  start-dev-3000.cmd
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CitationPanel.tsx  MessageList.tsx  ThemeToggle.tsx  VersionPicker.tsx
frontend/lib/: highlight.ts  sse.ts
